# classified

./: .actrc  .dockerignore  .env.act  .gitignore  CLAUDE.md  README.md  eslint.config.js  package.json  test-ws-messaging.js  tsconfig.json  turbo.json  websocket-test.mjs
.cursor/rules/elizaos/: elizaos_api.mdc  elizaos_core_runtime.mdc  elizaos_docs_architecture.mdc  elizaos_interfaces.mdc
.cursor/rules/game/: architecture.mdc  general.mdc
.github/: SETUP.md
.github/workflows/: README.md  app-store-deploy.yml  build-test.yml  container-release.yml  deploy-lander.yml  eliza-game-container.yml  lander-deploy.yml  manual-release.yml  release-universal.yml  release.yml  tauri-release.yml  test-build.yml  verify-deployment.yml
container-test/: Cargo.toml  README.md  test-socketio.js
container-test/src/: main.rs
deployment/: README.md  README_APPSTORE.md
deployment/linux-stores/: README.md
deployment/linux-stores/snap/: snapcraft.yaml
deployment/mac-app-store/: README.md
deployment/microsoft-store/: README.md
deployment/steam/: README.md
scripts/: check-tauri.js  clean-all.js  test-ci-cd.sh  test-workflows-simple.sh  test-workflows.js  validate-ci-cd.sh  verify-build.js  verify-release-setup.js
