[package]
name = "container-test"
version = "0.1.0"
edition = "2021"

[dependencies]
# Container management
bollard = "0.16"

# Socket.IO client 
rust_socketio = { version = "0.6", features = ["async"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for health checks
reqwest = { version = "0.11", features = ["json"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Environment variables
dotenv = "0.15"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2.5"

# Future utilities
futures = "0.3"
futures-util = "0.3"